--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,12 @@
   font-variation-settings: "wdth" 100;
 }
 
+.secondary-bg {
+  background-color: #fff8f3;
+}
+.text-center {
+  text-align: center;
+}
 /* header style */
 .header {
   background-image: url(../images/developer.png), url(../images/header_bg.png);
@@ -84,4 +90,114 @@ nav ul li a {
 
 .banner-pic {
   width: 580px;
+}
+/* main Section style */
+main {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+/* about style */
+
+.section-title {
+  color: rgb(24, 24, 24);
+  font-size: 35px;
+  font-weight: 700;
+}
+
+.section-desc {
+  color: rgb(117, 117, 117);
+  font-family: Open Sans;
+  font-size: 18px;
+  font-weight: 400;
+}
+main section {
+  margin-top: 130px;
+  margin-bottom: 130px;
+}
+.about {
+  border-radius: 10px;
+  padding: 130px 150px;
+  text-align: center;
+}
+
+.about-items {
+  display: flex;
+  justify-content: space-around;
+}
+
+.about-item {
+  color: rgb(117, 117, 117);
+  font-family: Open Sans;
+  font-size: 10px;
+  font-weight: 700;
+}
+
+/* skills-container style */
+.skills-container {
+  display: flex;
+  gap: 20px;
+}
+
+.skill {
+  border-radius: 10px;
+
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+  background: rgb(255, 255, 255);
+  padding: 30px;
+  margin-top: 30px;
+}
+
+.education {
+  display: flex;
+  gap: 10px;
+}
+.my_education {
+  color: rgb(71, 71, 71);
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.my_subject {
+  color: rgb(71, 71, 71);
+  font-size: 25px;
+  font-weight: 700;
+}
+.University_name {
+  color: rgb(117, 117, 117);
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.education-desc {
+  color: rgb(117, 117, 117);
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.btn {
+  margin-top: 30px;
+}
+/* footer style */
+footer {
+  padding: 130px 230px;
+  display: flex;
+  gap: 100px;
+}
+
+.footer-column {
+  width: 50%;
+}
+
+footer input[type="text"],
+footer input[type="email"],
+footer textarea {
+  height: 64px;
+  border-radius: 5px;
+  background-color: white;
+  display: block;
+  width: 100%;
+  padding: 10 20px;
+  margin-bottom: 24px;
+  border: none;
 }
