--- a/style/style.css
+++ b/style/style.css
@@ -201,3 +201,37 @@ footer textarea {
   margin-bottom: 24px;
   border: none;
 }
+
+/* responsive */
+
+@media screen and (max-width: 576px) {
+  .skills-container,
+  footer {
+    flex-direction: column;
+  }
+
+  .education {
+    flex-direction: column;
+  }
+
+  footer {
+    padding: 20px;
+  }
+
+  .footer-column {
+    width: 100%;
+  }
+  /* footer input[type="text"],
+  footer input[type="email"],
+  footer textarea {
+    width: calc(100% - 20px);
+  } */
+
+  .about {
+    padding: 20px;
+  }
+
+  .about-items {
+    flex-direction: column;
+  }
+}
